--- a/style.css
+++ b/style.css
@@ -1,26 +1,26 @@
-
-
 .poppins-regular {
-  font-family: "Poppins", sans-serif;
-  font-weight: 400;
-  font-style: normal;
+    font-family: "Poppins", sans-serif;
+    font-weight: 400;
+    font-style: normal;
 }
 
 
-header, main, footer {
+header,
+main,
+footer {
     max-width: 1400px;
     margin: 0 auto;
     padding: 10px;
 }
 
-a{
+a {
     color: black;
     text-decoration: none;
 }
 
 header nav h2 {
-font-size: 24px;
-font-weight: bold;
+    font-size: 24px;
+    font-weight: bold;
 }
 
 header nav ul {
@@ -35,31 +35,34 @@ header nav ul li a {
     color: black;
 }
 
-header nav ul li a i{
+header nav ul li a i {
     font-size: 20px;
     color: black;
 }
 
-nav{
+nav {
     display: flex;
-    justify-content: space-between;
     align-items: center;
+    justify-content: space-between;
 }
 
-.hero{
+
+
+.hero {
     display: flex;
     align-items: center;
     justify-content: space-between;
     height: 100%;
     margin-top: 50px;
-     background-image: url('influencer-gear/images/Circle\ design.svg');
+    background-image: url('influencer-gear/images/Circle\ design.svg');
     background-repeat: no-repeat;
     background-position: right center;
-    padding:60px 0;
+    padding: 60px 0;
 
 }
 
-.hero_text , hero_image{
+.hero_text,
+hero_image {
     width: 50%;
 }
 
@@ -74,21 +77,22 @@ nav{
     font-weight: bold;
 }
 
-.hero_text p , button{
+.hero_text p,
+button {
     font-size: 16px;
     font-weight: 400;
     margin-bottom: 50px;
 }
 
- .hero_text a{
-    background-color:rgb(231, 51, 126) ;
+.hero_text a {
+    background-color: rgb(231, 51, 126);
     color: whitesmoke;
     font-weight: 700;
     padding: 10px 20px;
     border: none;
     border-radius: 25px;
-    margin-bottom:;
-   
+
+
 }
 
 .companys {
@@ -98,6 +102,148 @@ nav{
     gap: 30px;
     box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
     padding: 10px 0;
-   
+    border-radius: 5px; 
+
 }
 
+#nav_2{
+    display: none;
+}
+
+@media screen and (max-width: 568px) {
+    header #nav_1 {
+        display: none;
+    }
+
+    #hero_area {
+        display: flex;
+        flex-direction: column-reverse;
+        width: 100%;
+    }
+
+    .hero_text,
+    .hero_img,
+    #camra {
+        width: 100%;
+    }
+
+    .companys {
+        flex-wrap: wrap;
+        justify-content: center;
+    }
+
+    .hero {
+        padding: 0;
+        margin: 0;
+        background-size: 100%;
+        background-repeat: no-repeat;
+        background-position: center top;
+    }
+
+
+    #hero_area .hero_text {
+        padding: 0;
+        margin: 50px 0;
+        text-align: center;
+    }
+
+    #hero_area .hero_text h1 {
+        font-size: 28px;
+        padding: 0;
+        font-weight: bold;
+    }
+
+    #hero_area p {
+        font-size: 14px;
+        color: rgba(0, 0, 0, 0.432);
+    }
+
+    .hero_text a {
+        text-align: center;
+    }
+}
+
+@media screen and (min-width: 568px) and (max-width: 1024px) {
+
+   header #nav_2 {
+        display: none;
+    }
+
+    header #nav_1 {
+        flex-direction: column;
+    }
+
+    header #nav_1 ul {
+        width: 100%;
+        justify-content: space-around;
+        margin-bottom: 50px;
+    }
+
+    header #nav_1 h2 {
+        font-size: 35px;
+        font-weight: bold;
+    }
+
+
+    #hero_area {
+        display: flex;
+        flex-direction: column-reverse;
+        width: 100%;
+    }
+
+    .hero_text,
+    .hero_img,
+    #camra {
+        width: calc(100% - 100px);
+        text-align: center;
+        padding-top: 25px;
+        margin-bottom: 50px;
+    }
+
+    #heading1 {
+        font-size: 45px; 
+    }
+
+
+
+    .hero {
+        padding: 0;
+        margin: 0;
+        background-size: calc(100% - 100px);
+        background-repeat: no-repeat;
+        background-position: center top;
+    }
+
+
+    #hero_area .hero_text {
+        padding: 0;
+        margin: 50px 0;
+        text-align: center;
+    }
+
+    #hero_area .hero_text h1 {
+        font-size: 28px;
+        padding: 0;
+        font-weight: bold;
+    }
+
+    #hero_area p {
+        font-size: 14px;
+        color: rgba(0, 0, 0, 0.432);
+    }
+
+    .companys img{
+        margin: 0 auto;
+    }
+
+    .companys {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+      
+
+
+    }
+
+    
+
+}
